Impl custom MovieRepository methods findAny and findFirst